<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="300dp" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/dp_5" android:layout_width="300dp" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/heading" android:background="@color/colorCard" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/query_invoices"/>
        <TextView android:padding="@dimen/dp_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to"/>
        <Spinner android:entries="@array/quertTo" android:padding="@dimen/dp_5" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textColor="@color/black" android:id="@+id/inoviceid" android:padding="@dimen/dp_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/inovice_id"/>
        <EditText android:id="@+id/message" android:layout_width="match_parent" android:layout_height="100dp" android:hint="@string/message"/>
        <Button android:gravity="center" android:layout_gravity="end" android:id="@+id/send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send"/>
    </LinearLayout>
</LinearLayout>
